--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -476,7 +476,7 @@ components:
       example: myUserId
 
     subscription_enabled:
-      description: Set to False to pause/disable the processing of new data.
+      description: Set to false to pause/disable the processing of new data.
       type: boolean
 
     datetime:
