--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,9 @@ jobs:
         with:
           python-version: 3.8
 
-      - run: python -m pip install --upgrade pip
+      - run: |
+          python -m pip install --upgrade pip
+          make install
 
       - name: run pytest
         run: make tests
