--- a/apps/process-new-granules/process-new-granules-cf.yml
+++ b/apps/process-new-granules/process-new-granules-cf.yml
@@ -9,6 +9,12 @@ Parameters:
     Type: String
   MonthlyJobQuotaPerUser:
     Type: Number
+  PermissionsBoundaryPolicyArn:
+    Type: String
+    Default: ""
+
+Conditions:
+  UsePermissionsBoundary: !Not [ !Equals [ !Ref PermissionsBoundaryPolicyArn, "" ] ]
 
 Outputs:
   LambdaArn:
@@ -31,6 +37,7 @@ Resources:
           Principal:
             Service: lambda.amazonaws.com
           Effect: Allow
+      PermissionsBoundary: !If [UsePermissionsBoundary, !Ref PermissionsBoundaryPolicyArn, !Ref AWS::NoValue]
       Policies:
         - PolicyName: policy
           PolicyDocument:
