--- a/job_types.yml
+++ b/job_types.yml
@@ -156,6 +156,8 @@ Autorift:
     - '!Ref Bucket'
     - --bucket-prefix
     - Ref::bucket_prefix
+    - --parmeter-file
+    - `Ref ParameterFile`
     - --naming-scheme
     - '!Ref AutoriftNamingScheme'
     - Ref::granules
