--- a/.github/actions/deploy-hyp3/action.yml
+++ b/.github/actions/deploy-hyp3/action.yml
@@ -34,12 +34,13 @@ inputs:
     required: true
   MONTHLY_JOB_QUOTA_PER_USER:
     description: "The default number of jobs any user with an Earthdata Login can run per month"
-    required: false
-    default: "0"
+    required: true
   AUTORIFT_NAMING_SCHEME:
     description: "Naming scheme for autoRIFT products, On Demand (ITS_LIVE_OD) or Production (ITS_LIVE_PROD)"
-    required: false
-    default: "ITS_LIVE_OD"
+    required: true
+  AUTORIFT_PARAMETER_FILE:
+    description: "Naming scheme for autoRIFT products, On Demand (ITS_LIVE_OD) or Production (ITS_LIVE_PROD)"
+    required: true
 
 runs:
   using: "composite"
@@ -75,4 +76,5 @@ runs:
                 DomainName='${{ inputs.DOMAIN_NAME }}' \
                 CertificateArn='${{ inputs.CERTIFICATE_ARN }}' \
                 MonthlyJobQuotaPerUser='${{ inputs.MONTHLY_JOB_QUOTA_PER_USER }}' \
-                AutoriftNamingScheme='${{ inputs.AUTORIFT_NAMING_SCHEME }}'
+                AutoriftNamingScheme='${{ inputs.AUTORIFT_NAMING_SCHEME }}' \
+                AutoriftParameterFile='${{ inputs.AUTORIFT_PARAMETER_FILE }}'
