--- a/.github/actions/deploy-hyp3/action.yml
+++ b/.github/actions/deploy-hyp3/action.yml
@@ -35,6 +35,9 @@ inputs:
   MONTHLY_JOB_QUOTA_PER_USER:
     description: "The default number of jobs any user with an Earthdata Login can run per month"
     required: true
+  AUTORIFT_IMAGE:
+    description: "HyP3 AutoRIFT plugin container image to pull"
+    required: true
   AUTORIFT_NAMING_SCHEME:
     description: "Naming scheme for autoRIFT products, On Demand (ITS_LIVE_OD) or Production (ITS_LIVE_PROD)"
     required: true
@@ -76,5 +79,6 @@ runs:
                 DomainName='${{ inputs.DOMAIN_NAME }}' \
                 CertificateArn='${{ inputs.CERTIFICATE_ARN }}' \
                 MonthlyJobQuotaPerUser='${{ inputs.MONTHLY_JOB_QUOTA_PER_USER }}' \
+                AutoriftImage='${{ inputs.AUTORIFT_IMAGE }}' \
                 AutoriftNamingScheme='${{ inputs.AUTORIFT_NAMING_SCHEME }}' \
                 AutoriftParameterFile='${{ inputs.AUTORIFT_PARAMETER_FILE }}'
