--- a/apps/main-cf.yml
+++ b/apps/main-cf.yml
@@ -58,6 +58,10 @@ Parameters:
       - false
       - true
 
+  AutoriftImage:
+    Type: String
+    Default: ''
+
   AutoriftNamingScheme:
     Description: Naming scheme for autoRIFT products, On Demand (ITS_LIVE_OD) or Production (ITS_LIVE_PROD)
     Type: String
@@ -123,6 +127,7 @@ Resources:
         EDLPassword: !Ref EDLPassword
         Bucket: !Ref ContentBucket
         ImageTag: !Ref ImageTag
+        AutoriftImage: !Ref AutoriftImage
         AutoriftNamingScheme: !Ref AutoriftNamingScheme
         AutoriftParameterFile: !Ref AutoriftParameterFile
       TemplateURL: workflow-cf.yml
