--- a/job_types.yml
+++ b/job_types.yml
@@ -139,7 +139,7 @@ InsarGamma:
   timeout: 10800
 
 Autorift:
-  image: 845172464411.dkr.ecr.us-west-2.amazonaws.com/hyp3-autorift
+  image: '!Ref AutoriftImage'
   api_job_type: AUTORIFT
   parameters:
     granules:
