--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,16 @@ jobs:
             autorift_naming_scheme: ITS_LIVE_PROD
             autorift_parameter_file: '/vsicurl/http://its-live-data-eu.jpl.nasa.gov.s3.amazonaws.com/autorift_parameters/v001/autorift_landice_0120m.shp'
 
+          - environment: hyp3
+            domain: hyp3-isce.asf.alaska.edu
+            template_bucket: cf-templates-aubvn3i9olmk-us-west-2
+            image_tag: 9ef8f93
+            quota: 0
+            deploy_ref: refs/heads/isce
+            autorift_image: 845172464411.dkr.ecr.us-west-2.amazonaws.com/hyp3-autorift
+            autorift_naming_scheme: ITS_LIVE_OD
+            autorift_parameter_file: '/vsicurl/http://its-live-data.jpl.nasa.gov.s3.amazonaws.com/autorift_parameters/v001/autorift_landice_0120m.shp'
+
     environment:
       name: ${{ matrix.environment }}
       url: https://${{ matrix.domain }}
