--- a/tests/cfg.env
+++ b/tests/cfg.env
@@ -11,4 +11,4 @@ AWS_ACCESS_KEY_ID=testing
 AWS_SECRET_ACCESS_KEY=testing
 AWS_SECURITY_TOKEN=testing
 AWS_SESSION_TOKEN=testing
-BANNED_CIDR_BLOCKS='["1.1.1.0/24","2.2.2.2/32"]'
+BANNED_CIDR_BLOCKS=1.1.1.0/24,2.2.2.2/32
