--- a/apps/main-cf.yml
+++ b/apps/main-cf.yml
@@ -77,6 +77,7 @@ Parameters:
   BannedCidrBlocks:
     Description: Comma separated list of IP CIDR blocks that will receive HTTP 403 FORBIDDEN responses from the API
     Type: String
+    Default: ""
 
 Outputs:
 
