--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
           - environment: hyp3-isce
             domain: hyp3-isce.asf.alaska.edu
             template_bucket: cf-templates-aubvn3i9olmk-us-west-2
-            image_tag: latest
+            image_tag: test
             quota: 0
             deploy_ref: refs/heads/isce
             autorift_image: 845172464411.dkr.ecr.us-west-2.amazonaws.com/hyp3-autorift
