--- a/job_types.yml
+++ b/job_types.yml
@@ -165,7 +165,7 @@ Autorift:
   timeout: 10800
 
 InsarISCE:
-  image: 845172464411.dkr.ecr.us-west-2.amazonaws.com/hyp3-isce2
+  image: ghcr.io/dbekaert/dockerizedtopsapp
   api_job_type: INSAR_ISCE
   parameters:
     granules:
