--- a/job_spec/RTC_GAMMA.yml
+++ b/job_spec/RTC_GAMMA.yml
@@ -1,5 +1,5 @@
 image: 845172464411.dkr.ecr.us-west-2.amazonaws.com/hyp3-gamma
-input_parameters:
+required_parameters:
   - granules
 parameters:
   granules:
