--- a/apps/process-new-granules/process-new-granules-cf.yml
+++ b/apps/process-new-granules/process-new-granules-cf.yml
@@ -18,9 +18,19 @@ Parameters:
     Type: String
     Default: ""
 
+  SecurityGroupId:
+    Type: String
+    Default: ""
+
+  SubnetIds:
+    Type: CommaDelimitedList
+    Default: ""
+
 Conditions:
 
   UsePermissionsBoundary: !Not [!Equals [!Ref PermissionsBoundaryPolicyArn, ""]]
+
+  LambdasInVpc: !Not [!Equals [!Ref SecurityGroupId, ""]]
 
 Outputs:
 
@@ -45,6 +55,8 @@ Resources:
             Service: lambda.amazonaws.com
           Effect: Allow
       PermissionsBoundary: !If [UsePermissionsBoundary, !Ref PermissionsBoundaryPolicyArn, !Ref AWS::NoValue]
+      ManagedPolicyArns:
+        - !If [LambdasInVpc, arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole, !Ref AWS::NoValue]
       Policies:
         - PolicyName: policy
           PolicyDocument:
@@ -84,6 +96,13 @@ Resources:
       Role: !GetAtt Role.Arn
       Runtime: python3.8
       Timeout: 900
+      VpcConfig:
+        !If
+          - LambdasInVpc
+          - SecurityGroupIds:
+              - !Ref SecurityGroupId
+            SubnetIds: !Ref SubnetIds
+          - !Ref AWS::NoValue
 
   EventInvokeConfig:
     Type: AWS::Lambda::EventInvokeConfig
