--- a/apps/get-files/get-files-cf.yml
+++ b/apps/get-files/get-files-cf.yml
@@ -9,9 +9,19 @@ Parameters:
     Type: String
     Default: ""
 
+  SecurityGroupId:
+    Type: String
+    Default: ""
+
+  SubnetIds:
+    Type: CommaDelimitedList
+    Default: ""
+
 Conditions:
 
   UsePermissionsBoundary: !Not [!Equals [!Ref PermissionsBoundaryPolicyArn, ""]]
+
+  LambdasInVpc: !Not [!Equals [!Ref SecurityGroupId, ""]]
 
 Outputs:
 
@@ -37,6 +47,8 @@ Resources:
             Service: lambda.amazonaws.com
           Effect: Allow
       PermissionsBoundary: !If [UsePermissionsBoundary, !Ref PermissionsBoundaryPolicyArn, !Ref AWS::NoValue]
+      ManagedPolicyArns:
+        - !If [LambdasInVpc, arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole, !Ref AWS::NoValue]
       Policies:
         - PolicyName: policy
           PolicyDocument:
@@ -66,3 +78,10 @@ Resources:
       Role: !GetAtt Role.Arn
       Runtime: python3.8
       Timeout: 30
+      VpcConfig:
+        !If
+          - LambdasInVpc
+          - SecurityGroupIds:
+              - !Ref SecurityGroupId
+            SubnetIds: !Ref SubnetIds
+          - !Ref AWS::NoValue
