Revert "option to deploy api lambda into vpc"

--- a/apps/compute-cf.yml
+++ b/apps/compute-cf.yml
@@ -2,8 +2,8 @@ AWSTemplateFormatVersion: 2010-09-09
 
 Parameters:
 
-  SecurityGroupId:
-    Type: AWS::EC2::SecurityGroup::Id
+  VpcId:
+    Type: AWS::EC2::VPC::Id
 
   SubnetIds:
     Type: List<AWS::EC2::Subnet::Id>
@@ -17,6 +17,7 @@ Parameters:
 
   PermissionsBoundaryPolicyArn:
     Type: String
+    Default: ""
 
 Conditions:
 
@@ -31,6 +32,12 @@ Outputs:
     Value: !GetAtt TaskRole.Arn
 
 Resources:
+
+  SecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: !Sub "Security group for ${AWS::StackName} machines"
+      VpcId: !Ref VpcId
 
   LaunchTemplate:
     Type: AWS::EC2::LaunchTemplate
@@ -65,7 +72,7 @@ Resources:
         Subnets: !Ref SubnetIds
         InstanceRole: !Ref InstanceProfile
         SecurityGroupIds:
-          - !Ref SecurityGroupId
+          - !Ref SecurityGroup
         LaunchTemplate:
           LaunchTemplateId: !Ref LaunchTemplate
           Version: $Latest
