--- a/apps/start-execution/start-execution-cf.yml
+++ b/apps/start-execution/start-execution-cf.yml
@@ -10,18 +10,11 @@ Parameters:
 
   PermissionsBoundaryPolicyArn:
     Type: String
-
-  SecurityGroupId:
-    Type: String
-
-  SubnetIds:
-    Type: CommaDelimitedList
+    Default: ""
 
 Conditions:
 
   UsePermissionsBoundary: !Not [!Equals [!Ref PermissionsBoundaryPolicyArn, ""]]
-
-  LambdasInVpc: !Not [!Equals [!Ref SecurityGroupId, ""]]
 
 Resources:
 
@@ -42,8 +35,6 @@ Resources:
             Service: lambda.amazonaws.com
           Effect: Allow
       PermissionsBoundary: !If [UsePermissionsBoundary, !Ref PermissionsBoundaryPolicyArn, !Ref AWS::NoValue]
-      ManagedPolicyArns:
-        - !If [LambdasInVpc, arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole, !Ref AWS::NoValue]
       Policies:
         - PolicyName: policy
           PolicyDocument:
@@ -74,13 +65,6 @@ Resources:
       Role: !GetAtt Role.Arn
       Runtime: python3.8
       Timeout: 45
-      VpcConfig:
-        !If
-          - LambdasInVpc
-          - SecurityGroupIds:
-              - !Ref SecurityGroupId
-            SubnetIds: !Ref SubnetIds
-          - !Ref AWS::NoValue
 
   EventInvokeConfig:
     Type: AWS::Lambda::EventInvokeConfig
