change name of compute environment resource to force replacement

--- a/apps/compute-cf.yml
+++ b/apps/compute-cf.yml
@@ -56,7 +56,7 @@ Resources:
 
             --==BOUNDARY==--
 
-  ComputeEnvironment:
+  ComputeEnvironmentFIXME:
     Type: AWS::Batch::ComputeEnvironment
     Properties:
       ServiceRole: !GetAtt BatchServiceRole.Arn
