--- a/apps/main-cf.yml
+++ b/apps/main-cf.yml
@@ -83,12 +83,29 @@ Parameters:
     Type: String
     Default: ""
 
+  DeployLambdasInVpc:
+    Type: String
+    Default: false
+    AllowedValues:
+      - false
+      - true
+
+Conditions:
+
+  LambdasInVpc: !Equals [!Ref DeployLambdasInVpc, "true"]
+
 Outputs:
 
   ApiUrl:
     Value: !GetAtt Api.Outputs.Url
 
 Resources:
+
+  SecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: !Sub "Security group for ${AWS::StackName} resources"
+      VpcId: !Ref VpcId
 
   Api:
     Type: AWS::CloudFormation::Stack
@@ -105,13 +122,15 @@ Resources:
         SystemAvailable: !Ref SystemAvailable
         BannedCidrBlocks: !Ref BannedCidrBlocks
         PermissionsBoundaryPolicyArn: !Ref PermissionsBoundaryPolicyArn
+        SecurityGroupId: !If [LambdasInVpc, !Ref SecurityGroup, ""]
+        SubnetIds: !If [LambdasInVpc, !Join [',', !Ref SubnetIds], ""]
       TemplateURL: api/api-cf.yml
 
   Cluster:
     Type: AWS::CloudFormation::Stack
     Properties:
       Parameters:
-        VpcId: !Ref VpcId
+        SecurityGroupId: !Ref SecurityGroup
         SubnetIds: !Join [',', !Ref SubnetIds]
         ContentBucket: !Ref ContentBucket
         PermissionsBoundaryPolicyArn: !Ref PermissionsBoundaryPolicyArn
@@ -126,6 +145,8 @@ Resources:
         SubscriptionsTable: !Ref SubscriptionsTable
         MonthlyJobQuotaPerUser: !Ref MonthlyJobQuotaPerUser
         PermissionsBoundaryPolicyArn: !Ref PermissionsBoundaryPolicyArn
+        SecurityGroupId: !If [LambdasInVpc, !Ref SecurityGroup, ""]
+        SubnetIds: !If [LambdasInVpc, !Join [',', !Ref SubnetIds], ""]
       TemplateURL: process-new-granules/process-new-granules-cf.yml
 
   StepFunction:
@@ -143,6 +164,8 @@ Resources:
         AutoriftNamingScheme: !Ref AutoriftNamingScheme
         AutoriftParameterFile: !Ref AutoriftParameterFile
         PermissionsBoundaryPolicyArn: !Ref PermissionsBoundaryPolicyArn
+        SecurityGroupId: !If [LambdasInVpc, !Ref SecurityGroup, ""]
+        SubnetIds: !If [LambdasInVpc, !Join [',', !Ref SubnetIds], ""]
       TemplateURL: workflow-cf.yml
 
   Monitoring:
