--- a/.github/actions/deploy-hyp3/action.yml
+++ b/.github/actions/deploy-hyp3/action.yml
@@ -55,8 +55,8 @@ runs:
         shell: bash
         run: |
           pip install --upgrade pip
-          pip install -r requirements-all.txt
-          python apps/render_cf.py
+          make install
+          make render
           pip install -r apps/api/requirements-api.txt -t apps/api/src
           pip install -r apps/process-new-granules/requirements-process-new-granules.txt -t apps/process-new-granules/src
           pip install -r apps/update-db/update-db-requirements.txt -t apps/update-db/src
