--- a/job_spec/AUTORIFT_ITS_LIVE_EU.yml
+++ b/job_spec/AUTORIFT_ITS_LIVE_EU.yml
@@ -1,5 +1,5 @@
 AUTORIFT:
-  image: 845172464411.dkr.ecr.us-west-2.amazonaws.com/hyp3-autorift
+  image: 230742024655.dkr.ecr.eu-central-1.amazonaws.com/hyp3-autorift
   parameters:
     granules:
       default:  '""'
@@ -45,9 +45,9 @@ AUTORIFT:
     - --bucket-prefix
     - Ref::bucket_prefix
     - --parameter-file
-    - '/vsicurl/http://its-live-data.jpl.nasa.gov.s3.amazonaws.com/autorift_parameters/v001/autorift_landice_0120m.shp'
+    - '/vsicurl/http://its-live-data-eu.jpl.nasa.gov.s3.amazonaws.com/autorift_parameters/v001/autorift_landice_0120m.shp'
     - --naming-scheme
-    - ITS_LIVE_OD
+    - ITS_LIVE_PROD
     - Ref::granules
   validators: []
   timeout: 10800
