--- a/.github/actions/deploy-hyp3/action.yml
+++ b/.github/actions/deploy-hyp3/action.yml
@@ -50,7 +50,7 @@ runs:
         run: |
           pip install --upgrade pip
           make install
-          make files=${{ inputs.JOB_FILES }} render
+          make files='${{ inputs.JOB_FILES }}' render
           pip install -r apps/api/requirements-api.txt -t apps/api/src
           pip install -r apps/process-new-granules/requirements-process-new-granules.txt -t apps/process-new-granules/src
           pip install -r apps/update-db/update-db-requirements.txt -t apps/update-db/src
