--- a/job_spec/AUTORIFT_ITS_LIVE.yml
+++ b/job_spec/AUTORIFT_ITS_LIVE.yml
@@ -1,5 +1,7 @@
 AUTORIFT:
   image: 845172464411.dkr.ecr.us-west-2.amazonaws.com/hyp3-autorift
+  required_parameters:
+    - granules
   parameters:
     granules:
       default:  '""'
