flag additional fields as required in GET /subscriptions responses

--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -259,6 +259,9 @@ components:
         - subscription_id
         - search_parameters
         - job_specification
+        - user_id
+        - creation_date
+        - enabled
       additionalProperties: false
       properties:
         subscription_id:
