Require secondary granules for INSAR_ISCE

--- a/job_spec/INSAR_ISCE.yml
+++ b/job_spec/INSAR_ISCE.yml
@@ -2,6 +2,7 @@ INSAR_ISCE:
   image: ghcr.io/access-cloud-based-insar/dockerizedtopsapp
   required_parameters:
     - granules
+    - secondary_granules
   parameters:
     granules:
       default:  '""'
