--- a/job_spec/INSAR_ISCE.yml
+++ b/job_spec/INSAR_ISCE.yml
@@ -10,24 +10,24 @@ INSAR_ISCE:
         type: array
         minItems: 1
         items:
-          description: The name of the Sentinel-1 SLC granule to process
+          description: The name of the Sentinel-1 SLC granule to use as reference scenes for InSAR processing
           type: string
           pattern: "^S1[AB]_IW_SLC__1S[SD][VH]"
           minLength: 67
           maxLength: 67
-          example: S1A_IW_SLC__1SSV_20150621T120220_20150621T120232_006471_008934_72D8
+          example: S1B_IW_SLC__1SDV_20210723T014947_20210723T015014_027915_0354B4_B3A9
     secondary_granules:
       default: '""'
       api_schema:
         type: array
         minItems: 1
         items:
-          description: The name of the Sentinel-1 SLC granule to process
+          description: The name of the Sentinel-1 SLC granule to use as secondary scenes for InSAR processing
           type: string
           pattern: "^S1[AB]_IW_SLC__1S[SD][VH]"
           minLength: 67
           maxLength: 67
-          example: S1A_IW_SLC__1SSV_20150621T120220_20150621T120232_006471_008934_72D8
+          example: S1B_IW_SLC__1SDV_20210711T014922_20210711T014949_027740_034F80_859D
     bucket_prefix:
       default:  '""'
   command:
